crates/sith_python_parser/tests/snapshots/invalid_syntax@param_with_invalid_star_annotation.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/param_with_invalid_star_annotation.py
---
## AST

```
Module(
    ModModule {
        range: 0..150,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..22,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..17,
                        posonlyargs: [],
                        args: [],
                        vararg: Some(
                            Parameter {
                                range: 8..16,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 9..13,
                                },
                                annotation: Some(
                                    Starred(
                                        StarredExpr {
                                            range: 15..16,
                                            value: Name(
                                                NameExpr {
                                                    range: 16..16,
                                                    id: Name(""),
                                                    ctx: Invalid,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 19..22,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 19..22,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 23..57,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 27..30,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 30..52,
                        posonlyargs: [],
                        args: [],
                        vararg: Some(
                            Parameter {
                                range: 31..51,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 32..36,
                                },
                                annotation: Some(
                                    Starred(
                                        StarredExpr {
                                            range: 39..50,
                                            value: Subscript(
                                                SubscriptExpr {
                                                    range: 40..50,
                                                    value: Name(
                                                        NameExpr {
                                                            range: 40..45,
                                                            id: Name("tuple"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    slice: Name(
                                                        NameExpr {
                                                            range: 46..49,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 54..57,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 54..57,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 58..90,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 62..65,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 65..85,
                        posonlyargs: [],
                        args: [],
                        vararg: Some(
                            Parameter {
                                range: 66..84,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 67..71,
                                },
                                annotation: Some(
                                    Starred(
                                        StarredExpr {
                                            range: 73..84,
                                            value: BoolOp(
                                                BoolOpExpr {
                                                    range: 74..84,
                                                    op: Or,
                                                    values: [
                                                        Name(
                                                            NameExpr {
                                                                range: 74..77,
                                                                id: Name("int"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            NameExpr {
                                                                range: 81..84,
                                                                id: Name("str"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 87..90,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 87..90,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 91..120,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 95..98,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 98..115,
                        posonlyargs: [],
                        args: [],
                        vararg: Some(
                            Parameter {
                                range: 99..114,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 100..104,
                                },
                                annotation: Some(
                                    Starred(
                                        StarredExpr {
                                            range: 106..114,
                                            value: Yield(
                                                YieldExpr {
                                                    range: 107..114,
                                                    value: Some(
                                                        Name(
                                                            NameExpr {
                                                                range: 113..114,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 117..120,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 117..120,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(*args: *): ...
  |                 ^ Syntax Error: Expected an expression
2 | def foo(*args: (*tuple[int])): ...
3 | def foo(*args: *int or str): ...
  |


  |
1 | def foo(*args: *): ...
2 | def foo(*args: (*tuple[int])): ...
  |                 ^^^^^^^^^^^ Syntax Error: Starred expression cannot be used here
3 | def foo(*args: *int or str): ...
4 | def foo(*args: *yield x): ...
  |


  |
1 | def foo(*args: *): ...
2 | def foo(*args: (*tuple[int])): ...
3 | def foo(*args: *int or str): ...
  |                 ^^^^^^^^^^ Syntax Error: Boolean expression cannot be used here
4 | def foo(*args: *yield x): ...
5 | # def foo(*args: **int): ...
  |


  |
2 | def foo(*args: (*tuple[int])): ...
3 | def foo(*args: *int or str): ...
4 | def foo(*args: *yield x): ...
  |                 ^^^^^^^ Syntax Error: Yield expression cannot be used here
5 | # def foo(*args: **int): ...
  |
